feat: hello dao

--- a/src/daosite_assets/src/index.html
+++ b/src/daosite_assets/src/index.html
@@ -9,6 +9,7 @@
     <link type="text/css" rel="stylesheet" href="main.css" />
   </head>
   <body>
+    <h1 align="center"> Welcome to DAO Site</h1>
     <main>
       <img src="logo.png" alt="DFINITY logo" />
       <form action="#">
